@startuml
hide circles

!includesub Products.puml!QuoteProvider


!startsub FinamQuoteProvider
package StructuredProductPricer
{
    package Markets
    {
        class FinamQuoteProvider
        {
            {static} +create()
            +getQuotes(ticker: String, observationDates: Date[1..*]{ordered}): Real[1..*]{ordered}
        }
    }
}
!endsub


!startsub MoexGCurveQuoteProvider
package StructuredProductPricer
{
    package Markets
    {
        class MoexGCurveQuoteProvider
        {
            {static} +create()
            +getQuotes(ticker: String, observationDates: Date[1..*]{ordered}): Real[1..*]{ordered}
        }
    }
}
!endsub


!startsub QuoteInspector
package StructuredProductPricer
{
    package Markets
    {
        class QuoteInspector
        {
            {static} +create(inspectedObject: QuoteProvider)
            +plotQuotes(tickers: String[1..*], startDate: Date, endDate: Date)
            +exportQuotes(tickers: String[1..*], startDate: Date, endDate: Date, outputFilePath: String)
            {static} -getHistoricalWindow(startDate: Date, endDate: Date): Date[0..*]{ordered}
        }
    }
}
!endsub


FinamQuoteProvider -up--|> QuoteProvider
MoexGCurveQuoteProvider -up--|> QuoteProvider
QuoteInspector --> "inspectedObject" QuoteProvider

@enduml
